DB-populating module.

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -4,6 +4,7 @@
 play.modules {
   # By default, Play will load any class called Module that is defined in the root package (the "app" directory),
   # or you can define them explicitly below.
+  enabled += bootstrap.PhonebookDatabaseModule
 }
 
 ## IDE
